<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Triple Banana Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at https://mozilla.org/MPL/2.0/. -->

<resources>
    <string name="adblock">AdBlock</string>
    <string name="adblock_with_version">AdBlock (Ver: %s)</string>
    <string name="adblock_summary">Block ads on sites that show intrusive or misleading ads</string>
    <string name="add_secret_tab">Add Secret tab</string>
    <string name="add_to_home">Add to Home</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="advanced_features_summary">AdBlock, Dark Mode, Translate, Data reduction mode, External download manager...</string>
    <string name="already_latest_version">Latest version already installed</string>
    <string name="always">Always</string>
    <string name="archive">Archive</string>
    <string name="at_me_game">At Me Game</string>
    <string name="authentication_title">Authentication</string>
    <string name="authentication_description">Scan your biometric data to sign-in\nyour credentials</string>
    <string name="autoplay">Autoplay Media Contents</string>
    <string name="autoplay_summary">Allow sites to autoplay media contents</string>
    <string name="auto_clear_browsing_data_summary">Automatically clear browsing data such as history, cookies, site data, cache when exiting Banana Browser</string>
    <string name="auto_clear_browsing_data_tip"> You can change it at [Banana Extension > Privacy and Security > Auto-clear browsing data on quit]</string>
    <string name="auto_clear_browsing_data_title">Auto-clear browsing data on quit</string>
    <string name="back">Back</string>
    <string name="background_play">Background Play</string>
    <string name="background_play_summary">Enable play media in background when tab is not active or device screen is turned off</string>
    <string name="banana_extension">Banana Extension</string>
    <string name="browser_settings_summary">Change Banana Browser basic settings</string>
    <string name="browser_lock">Browser Lock</string>
    <string name="browser_lock_description">Scan your biometric data to unlock browser</string>
    <string name="browser_lock_summary">Use additional authentications to protect your personal data securely when opening Banana Browser. Once the authentication is success, its authenticated session is kept for 1 minute for your convenience.</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="clear_data">Clear data</string>
    <string name="close_tab">Close tab</string>
    <string name="data_reduction_mode">Data reduction mode</string>
    <string name="data_reduction_mode_summary">Load pages faster and use up to 60 percent less data</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_summary">Relieve eyestrain by activating dark mode at night</string>
    <string name="desktop_view">Desktop site</string>
    <string name="discard">Discard</string>
    <string name="drag_and_drop_buttons">Drag the frequently used buttons\nto the Toolbar</string>
    <string name="enable_bottom_toolbar">Enable Bottom Toolbar</string>
    <string name="exit_banana_browser">Exit Banana Browser</string>
    <string name="external_download_manager">Use external download manager</string>
    <string name="find_in_page">Find in page</string>
    <string name="forward">Forward</string>
    <string name="just_once">Just once</string>
    <string name="media_features">Media Features</string>
    <string name="media_features_summary">Use specialized media features of Banana Browser</string>
    <string name="media_remote">Media Remote</string>
    <string name="media_remote_back">Back</string>
    <string name="media_remote_backward">Backward</string>
    <string name="media_remote_brightness">Brightness</string>
    <string name="media_remote_closed_caption">Closed Caption</string>
    <string name="media_remote_default_time">00:00 | 00:00</string>
    <string name="media_remote_download">Download</string>
    <string name="media_remote_forward">Forward</string>
    <string name="media_remote_lock">Lock</string>
    <string name="media_remote_mute">Mute</string>
    <string name="media_remote_pip">Picture in picture</string>
    <string name="media_remote_play">Play</string>
    <string name="media_remote_playback_rate">Playback Rate</string>
    <string name="media_remote_quality">Quality</string>
    <string name="media_remote_rotate">Rotate</string>
    <string name="media_remote_summary">Enable powerful extend media player for video elements on fullscreen mode</string>
    <string name="media_remote_volume">Volume</string>
    <string name="mobile_view">Mobile site</string>
    <string name="new_tab">New tab</string>
    <string name="other_settings">Other settings</string>
    <string name="pip_disabled">PIP mode only enable when the video is playing</string>
    <string name="pip_not_supported">PIP mode is not supported on this video</string>
    <string name="please_long_click_to_reset_filter">Please long click if you\'d like to reset adblock filter</string>
    <string name="print">Print</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="privacy_and_security_summary">Protect your privacy online with strong security features provided by Banana Browser</string>
    <string name="qr_code">QR code</string>
    <string name="reload">Reload</string>
    <string name="reset">Reset</string>
    <string name="reset_adblock_filter">Reset adblock filter</string>
    <string name="reset_adblock_filter_summary">Please long click if you\'d like to reset the adblock filter (NOTE: This will remove the existing filter and then re-install latest filter again)</string>
    <string name="restart_message">Your changes will take effect the next time you relaunch Banana Browser.</string>
    <string name="save">Save</string>
    <string name="save_page">Save page</string>
    <string name="save_suggestion_message">Do you want to save your changes?</string>
    <string name="search">Search</string>
    <string name="secure_dns">Secure DNS</string>
    <string name="secure_dns_summary">Bypass website blocks using Secure DNS over HTTPS</string>
    <string name="secure_login">Secure Login</string>
    <string name="secure_login_summary">Use additional authentications to autofill stored credentials data securely when you try to sign-in on web sites (e.g. Biometrics, Pattern, PIN and so on)</string>
    <string name="share">Share</string>
    <string name="terminate">Terminate</string>
    <string name="toolbar_editor">Toolbar Editor</string>
    <string name="toolbar_editor_summary">Personalize your browing experience rearranging frequently used buttons on the bottom toolbar</string>
    <string name="translate">Translate</string>
    <string name="update_adblock_filter">Check for adblock filter updates</string>
    <string name="update_adblock_filter_summary">Experience even more powerful adblock feature with the latest filters</string>
    <string name="user_data">User Data</string>
    <string name="user_interface">User Interface</string>
    <string name="user_interface_summary">Change the look of your browser</string>
    <string name="use_secure_login">Use Secure Login\n(Biometrics, Pattern, PIN, and so on)</string>
    <string name="visit_history">Visit history</string>
</resources>
