<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Triple Banana Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at https://mozilla.org/MPL/2.0/. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="false">
    <PreferenceCategory android:title="@string/banana_extension" />
    <Preference
        android:fragment="org.triple.banana.settings.AdvancedFeatureSettings"
        android:title="@string/advanced_features"
        android:summary="@string/advanced_features_summary" />
    <Preference
        android:fragment="org.triple.banana.settings.MediaFeatureSettings"
        android:title="@string/media_features"
        android:summary="@string/media_features_summary" />
    <Preference
        android:fragment="org.triple.banana.settings.UserInterfaceSettings"
        android:title="@string/user_interface"
        android:summary="@string/user_interface_summary" />
    <Preference
        android:fragment="org.triple.banana.settings.PrivacyAndSecuritySettings"
        android:title="@string/privacy_and_security"
        android:summary="@string/privacy_and_security_summary" />

    <PreferenceCategory android:title="@string/other_settings" />
    <org.triple.banana.settings.preference.BrowserSettingsPreference
        android:title="@string/browser_settings"
        android:summary="@string/browser_settings_summary" />
</PreferenceScreen>
