<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2021 The Triple Banana Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at https://mozilla.org/MPL/2.0/. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="false">
    <PreferenceCategory android:title="@string/adblock" />
    <org.triple.banana.settings.preference.AdblockPreference
        android:key="feature_name_adblock"
        android:title="@string/adblock_with_version"
        android:summaryOn="@string/adblock_summary"
        android:summaryOff="@string/text_off" />
    <org.triple.banana.settings.preference.LongClickablePreference
        android:key="update_adblock_filter"
        android:summary="@string/update_adblock_filter_summary"
        android:title="@string/update_adblock_filter" />
</PreferenceScreen>
