<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Triple Banana Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at https://mozilla.org/MPL/2.0/. -->

<org.triple.banana.media_remote.MediaRemoteLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/media_remote_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/controls_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/media_remote_controls_background_color" />

    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/media_remote_top_margin"
        android:paddingBottom="@dimen/media_remote_bottom_margin"
        android:paddingStart="@dimen/media_remote_start_margin"
        android:paddingEnd="@dimen/media_remote_end_margin">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/media_remote_back"
            android:src="@drawable/ic_back" />

	<ImageButton
            android:id="@+id/quality_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/pip_button"
            android:contentDescription="@string/media_remote_quality"
            android:src="@drawable/ic_quality"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/pip_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/rotate_button"
            android:contentDescription="@string/media_remote_pip"
            android:src="@drawable/ic_pip"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/rotate_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/media_remote_button_size"
            android:contentDescription="@string/media_remote_rotate"
            android:src="@drawable/ic_rotate" />

        <ImageButton
            android:id="@+id/backward_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/play_button"
            android:contentDescription="@string/media_remote_backward"
            android:src="@drawable/ic_backward" />

        <ImageButton
            android:id="@+id/play_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/media_remote_play_button_horizontal_margin"
            android:contentDescription="@string/media_remote_play"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/forward_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/play_button"
            android:contentDescription="@string/media_remote_forward"
            android:src="@drawable/ic_forward" />

        <ImageButton
            android:id="@+id/mute_button"
            style="@style/MediaRemoteButtonTheme"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/media_remote_mute"
            android:src="@drawable/ic_mute" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/time_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mute_button"
            android:layout_alignBottom="@id/mute_button"
            android:layout_toStartOf="@id/time_text"
            android:layout_toEndOf="@id/mute_button"
            android:gravity="center"
            android:progressTint="@color/media_remote_highlight_color"
            android:thumbTint="@color/media_remote_highlight_color" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mute_button"
            android:layout_alignBottom="@id/mute_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/media_remote_time_text_end_margin"
            android:gravity="center"
            android:text="@string/media_remote_default_time"
            android:textColor="@android:color/white"
            android:textSize="@dimen/media_remote_text_size" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/lock_button"
        style="@style/MediaRemoteButtonTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/media_remote_top_margin"
        android:layout_marginEnd="@dimen/media_remote_end_margin"
        android:contentDescription="@string/media_remote_lock"
        android:src="@drawable/ic_lock" />

    <LinearLayout
        android:id="@+id/brightness_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/media_remote_brightness_or_volume_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/media_remote_brightness"
            android:src="@drawable/ic_brightness_up" />

        <org.triple.banana.base.widget.VerticalSeekBar
            android:id="@+id/brightness_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/media_remote_vertical_seekbar_size"
            android:progressTint="@color/media_remote_highlight_color"
            android:thumb="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/media_remote_brightness_or_volume_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/media_remote_volume"
            android:src="@drawable/ic_volume_up" />

        <org.triple.banana.base.widget.VerticalSeekBar
            android:id="@+id/volume_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/media_remote_vertical_seekbar_size"
            android:progressTint="@color/media_remote_highlight_color"
            android:thumb="@android:color/transparent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/waiting_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/media_remote_wait_progress_size"
        android:layout_height="@dimen/media_remote_wait_progress_size"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/media_remote_highlight_color"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/backward_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:theme="@style/MediaRemoteRippleEffectTheme" />

        <LinearLayout
            android:id="@+id/forward_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:theme="@style/MediaRemoteRippleEffectTheme" />
    </LinearLayout>
</org.triple.banana.media_remote.MediaRemoteLayout>
